name:              wt
version:           0.0.0
license:           BSD3
license-file:      LICENSE
author:            Michael Steele
maintainer:        Michael Steele
synopsis:          The greatest Yesod web application ever.
description:       I'm sure you can say something clever here if you try.
category:          Web
stability:         Experimental
cabal-version:     >= 1.8
build-type:        Simple
homepage:          http://wt.yesodweb.com/

Flag dev
    Description:   Turn on development settings, like auto-reload templates.
    Default:       False

Flag library-only
    Description:   Build for use with "yesod devel"
    Default:       False

library
    exposed-modules: Application
                     Foundation
                     Import
                     Model
                     Settings
                     Settings.StaticFiles
                     Settings.Development
                     GoogleEmail
                     Handler.Add
                     Handler.Confirm
                     Handler.Delete
                     Handler.Home
                     Handler.Download
                     Handler.User
                     Handler.Users

    if flag(dev) || flag(library-only)
        cpp-options:   -DDEVELOPMENT
        ghc-options:   -Wall -O0
    else
        ghc-options:   -Wall -O2

    extensions: TemplateHaskell
                QuasiQuotes
                OverloadedStrings
                NoImplicitPrelude
                CPP
                MultiParamTypeClasses
                TypeFamilies
                GADTs
                GeneralizedNewtypeDeriving
                FlexibleContexts
                EmptyDataDecls
                NoMonomorphismRestriction

    build-depends: base                  >= 4.5     && < 5
                 , authenticate          >= 1.2     && < 1.3
                 , blaze-html            >= 0.5     && < 0.6
                 , bytestring            >= 0.9     && < 0.10
                 , clientsession         >= 0.7.3   && < 0.8
                 , directory             >= 1.1     && < 1.2
                 , fb                    >= 0.9     && < 0.10
                 , hamlet                >= 1.0     && < 1.1
                 , hjsmin                >= 0.1     && < 0.2
                 , http-conduit          >= 1.4     && < 1.5
                 , lifted-base           >= 0.1     && < 0.2
                 , monad-control         >= 0.3     && < 0.4
                 , persistent            >= 0.9     && < 0.10
                 , persistent-sqlite     >= 0.9     && < 0.10
                 , shakespeare-css       >= 1.0     && < 1.1
                 , shakespeare-js        >= 1.0     && < 1.1
                 , shakespeare-text      >= 1.0     && < 1.1
                 , system-fileio
                 , system-filepath
                 , template-haskell
                 , text                  >= 0.11    && < 0.12
                 , wai                   >= 1.2     && < 1.3
                 , wai-extra             >= 1.2     && < 1.3
                 , warp                  >= 1.2     && < 1.3
                 , yaml                  >= 0.7     && < 0.8
                 , yesod-platform        >= 1.0     && < 1.1
                 , yesod                 >= 1.0     && < 1.1
                 , yesod-auth            >= 1.0     && < 1.1
                 , yesod-auth-fb         >= 1.0     && < 1.1
                 , yesod-core            >= 1.0     && < 1.1
                 , yesod-default         >= 1.0     && < 1.1
                 , yesod-form            >= 1.0     && < 1.1
                 , yesod-static          >= 1.0     && < 1.1
                 , yesod-test            >= 0.2     && < 0.3

executable         wt
    if flag(library-only)
        Buildable: False

    main-is:           ../main.hs
    hs-source-dirs:    dist
    build-depends:     base >= 4.5
                     , wt
                     , yesod-default
    ghc-options:       -threaded -O2

test-suite test
    type:              exitcode-stdio-1.0
    main-is:           main.hs
    hs-source-dirs:    tests
    ghc-options:       -Wall
    extensions:        TemplateHaskell
                       QuasiQuotes
                       OverloadedStrings
                       NoImplicitPrelude
                       CPP
                       OverloadedStrings
                       MultiParamTypeClasses
                       TypeFamilies
                       GADTs
                       GeneralizedNewtypeDeriving
                       FlexibleContexts

    build-depends: base
                 , wt
                 , yesod-test
                 , yesod-default
                 , yesod-core
