name:              wt
version:           0.0.0
license:           BSD3
license-file:      LICENSE
author:            Michael Steele
maintainer:        Michael Steele
synopsis:          The greatest Yesod web application ever.
description:       I'm sure you can say something clever here if you try.
category:          Web
stability:         Experimental
cabal-version:     >= 1.14
build-type:        Simple
homepage:          https://github.com/mikesteele81/wt

Flag dev
    Description:   Turn on development settings, like auto-reload templates.
    Default:       False

Flag library-only
    Description:   Build for use with "yesod devel"
    Default:       False

library
    default-language: Haskell2010
    exposed-modules: Application
                     Foundation
                     Model
                     Settings
                     Settings.StaticFiles
                     Settings.Development
                     GoogleEmail
                     Handler.Changes
                     Handler.Confirm
                     Handler.Delete
                     Handler.Home
                     Handler.Resource
                     Handler.Resources
                     Handler.User
                     Handler.Users

    if flag(dev) || flag(library-only)
        cpp-options:   -DDEVELOPMENT
        ghc-options:   -Wall -O0
    else
        ghc-options:   -Wall -O2

    build-depends: base                  >= 4.5     && < 5
                 , authenticate          >= 1.2     && < 1.3
                 , blaze-html            >= 0.5     && < 0.6
                 , bytestring            >= 0.9     && < 0.10
                 , clientsession         >= 0.7.3   && < 0.8
                 , conduit               >= 0.4     && < 0.5
                 , directory             >= 1.1     && < 1.2
                 , fb                    >= 0.9     && < 0.10
                 , hamlet                >= 1.0     && < 1.1
                 , hjsmin                >= 0.1     && < 0.2
                 , http-conduit          >= 1.4     && < 1.5
                 , lifted-base           >= 0.1     && < 0.2
                 , mime-mail             >= 0.3     && < 0.5
                 , mime-mail-ses         >= 0.2     && < 0.3
                 , monad-control         >= 0.3     && < 0.4
                 , persistent            >= 0.9     && < 0.10
                 , persistent-sqlite     >= 0.9     && < 0.10
                 , shakespeare-css       >= 1.0     && < 1.1
                 , shakespeare-js        >= 1.0     && < 1.1
                 , shakespeare-text      >= 1.0     && < 1.1
                 , system-fileio
                 , system-filepath
                 , template-haskell
                 , text                  >= 0.11    && < 0.12
                 , wai                   >= 1.2     && < 1.3
                 , wai-extra             >= 1.2     && < 1.3
                 , warp                  >= 1.2     && < 1.3
                 , yaml                  >= 0.7     && < 0.8
                 , yesod-platform        >= 1.0     && < 1.1
                 , yesod                 >= 1.0     && < 1.1
                 , yesod-auth            >= 1.0     && < 1.1
                 , yesod-auth-fb         >= 1.0.3   && < 1.1
                 , yesod-core            >= 1.0     && < 1.1
                 , yesod-default         >= 1.0     && < 1.1
                 , yesod-form            >= 1.0     && < 1.1
                 , yesod-static          >= 1.0     && < 1.1
                 , yesod-test            >= 0.2     && < 0.3

executable         wt
    default-language: Haskell2010
    if flag(library-only)
        Buildable: False

    main-is:           ../main.hs
    hs-source-dirs:    dist
    build-depends:     base >= 4.5
                     , wt
                     , yesod-default
    ghc-options:       -threaded -O2

test-suite test
    default-language: Haskell2010
    type:              exitcode-stdio-1.0
    main-is:           main.hs
    hs-source-dirs:    tests
    ghc-options:       -Wall
    build-depends: base
                 , wt
                 , yesod-test
                 , yesod-default
                 , yesod-core
