name:              wt
version:           0.0.0
license:           BSD3
license-file:      LICENSE
author:            Michael Steele
maintainer:        Michael Steele
synopsis:          The greatest Yesod web application ever.
description:       I'm sure you can say something clever here if you try.
category:          Web
stability:         Experimental
cabal-version:     >= 1.14
build-type:        Simple
homepage:          https://github.com/mikesteele81/wt

Flag dev
    Description:   Turn on development settings, like auto-reload templates.
    Default:       False

Flag library-only
    Description:   Build for use with "yesod devel"
    Default:       False

library
    default-language: Haskell2010
    exposed-modules: Application
                     Foundation
                     Model
                     Settings
                     Settings.StaticFiles
                     Settings.Development
                     GoogleEmail
                     Handler.Changes
                     Handler.Confirm
                     Handler.Delete
                     Handler.Download
                     Handler.Home
                     Handler.Publications
                     Handler.Resource
                     Handler.Resources
                     Handler.User
                     Handler.Users

    if flag(dev) || flag(library-only)
        cpp-options:   -DDEVELOPMENT
        ghc-options:   -Wall -O0
    else
        ghc-options:   -Wall -O2

    build-depends: base                  >= 4.5     && < 5
                 , authenticate
                 , blaze-html
                 , bytestring
                 , clientsession
                 -- Generate hmac key for file downloads.
                 , cprng-aes
                 , conduit
                 , directory
                 , fb
                 , hamlet
                 , hjsmin
                 , http-conduit
                 , http-types
                 , lifted-base
                 , mime-mail
                 -- Use Amazon Web Serveses SES to send email.
                 , mime-mail-ses
                 , monad-control
                 , persistent
                 , persistent-sqlite
                 -- Generate hmac key for file downloads.
                 , SHA
                 , shakespeare-css
                 , shakespeare-js
                 , shakespeare-text
                 , system-fileio
                 , system-filepath
                 , template-haskell
                 , text
                 -- Ensure that file download requests aren't stale.
                 , time
                 , wai
                 , wai-extra
                 , warp
                 , yaml
                 , yesod
                 , yesod-auth
                 , yesod-auth-fb
                 , yesod-core
                 , yesod-default
                 , yesod-form
                 , yesod-static
                 , yesod-test

executable         wt
    default-language: Haskell2010
    if flag(library-only)
        Buildable: False

    main-is:           ../main.hs
    hs-source-dirs:    dist
    build-depends:     base >= 4.5
                     , wt
                     , yesod-default
    ghc-options:       -threaded -O2

test-suite test
    default-language: Haskell2010
    type:              exitcode-stdio-1.0
    main-is:           main.hs
    hs-source-dirs:    tests
    ghc-options:       -Wall
    build-depends: base
                 , wt
                 , yesod-test
                 , yesod-default
                 , yesod-core
